syntax = "proto3";
package api;

import "google/api/annotations.proto";

message ServerRequest {

}

message ServerResponse {
  string ping = 1;
  int64 time = 2;
  string baseCurrency = 3;
  string swapCurrency = 4;
}

service Server {
  rpc server(ServerRequest) returns (ServerResponse) {
    option (google.api.http) = {
      post: "/v1/ping"
      body: "*"
    };
  }
}
